--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -66,18 +66,18 @@ jobs:
       run: |
         cmake --build . --config $BUILD_TYPE -j 2
 
-    - name: ⬆ Upload build result
+    - name: Upload build result
       uses: actions/upload-artifact@v3
       with:
         name: elf_file
-        path: main.elf
+        path: build/main.elf
 
-    - name: ➕ Upload elf to GH release page
+    - name: Upload elf to GH release page
       uses: svenstaro/upload-release-action@v2
       if: github.event_name == 'release' && github.repository == 'Pioreactor/pico-build'
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: main.elf
+        file: build/main.elf
         tag: ${{ github.ref }}
         overwrite: true
         file_glob: true
