--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -70,14 +70,14 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: elf_file
-        path: build/main.elf
+        path: ${{runner.workspace}}/build/main.elf
 
     - name: Upload elf to GH release page
       uses: svenstaro/upload-release-action@v2
       if: github.event_name == 'release' && github.repository == 'Pioreactor/pico-build'
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: build/main.elf
+        file: ${{runner.workspace}}/build/main.elf
         tag: ${{ github.ref }}
         overwrite: true
         file_glob: true
